--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "react-youtube": "^10.1.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.9",
     "swiper": "^9.1.1",
     "web-vitals": "^2.1.3",
