--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash.throttle": "^4.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-content-loader": "^6.2.1",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.8.0",
@@ -33,6 +34,7 @@
     "react-scroll-to-top": "^3.0.0",
     "react-select": "^5.7.2",
     "react-spinners": "^0.13.8",
+    "react-switch": "^7.0.0",
     "react-toastify": "^9.1.1",
     "react-youtube": "^10.1.0",
     "redux-persist": "^6.0.0",
