--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
+    "notiflix": "^3.2.6",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-content-loader": "^6.2.1",
