--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
-    "debounce": "^1.2.1",
     "formik": "^2.2.9",
-    "lodash": "^4.17.21",
-    "lodash.debounce": "^4.0.8",
-    "lodash.throttle": "^4.1.1",
+    "moment": "^2.29.4",
     "notiflix": "^3.2.6",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
